Fixed text contrast

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,8 +1,8 @@
 //Text Colors
 $color-text-black:#140330;
-$color-text-grey:#818182;
-$color-text-blue: #5F98D1;
-$color-text-purple: #9482D6;
+$color-text-grey:#3f3f40;
+$color-text-blue: #396899;
+$color-text-purple: #7b67c5;
 
 //Background Colors
 $color-background-pink: #FCF4F5;
